--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,4 +2,109 @@
     margin:0px;
     padding: 0px;
     font-family: sans-serif;
+    
+    text-align: center;
 }
+nav{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+}
+.menu{  
+    max-width: 100%;
+    height:7vh;
+    display:flex;
+    margin: 5px;
+    padding:10px;  
+    background: #edeff0; 
+}
+img{
+    margin-top: -12px;
+}
+.menu li{
+    width:100px;
+    margin:5px;
+    list-style:none; 
+}
+.menu li:hover{   
+    background:lavender;   
+}
+.dropdown-categorias{
+    width:100px; }
+.categorias li{  
+    width:100%;
+    background:#edeff0;    
+}
+.categorias{
+    display:none;
+}
+.dropdown-categorias:hover .categorias{    
+    width:100px;
+    margin-left:-6px;
+    padding: 5px 5px 5px 5px;  
+    display:flex;
+    flex-direction: column;  
+    align-items: center;  
+    margin-top:5px;       
+    background:#edeff0;
+}
+.categorias li:hover{   
+    width:100%;
+    background:lavender;   
+}
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    width:80%; 
+    height:74vh;
+    margin:auto;
+ 
+}
+.box-form-category{
+    width:50%;
+    height:300px;
+    display:flex;
+    flex-direction: column;   
+    align-items: center;
+    border:1px solid #7000f2;
+    border-radius: 20px;
+
+}
+#categoria-texto{
+    display: block;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    color:#7000f2;
+    font-size: larger;
+
+}
+   
+
+input:focus, button:focus{
+    border:1px solid #0d55ff;
+    outline: 0;
+}
+input{
+    text-align: start;
+    padding:6px 10px;
+    border:1px solid #0d55ff;
+    border-radius: 80px;
+   }
+button{
+    background:#0d55ff;
+    color: white;
+    padding:7px 11px;
+    border:none;
+    border-radius: 80px;
+}
+table{
+    margin:5px;
+}
+table td{
+    border:1px solid black;
+}
+
