--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
-<%- include ("partials/header") %>
-<body>
+<%- include ("partials/head") %>
+<%- include ("partials/navbar") %>
     página home
-</body>
 <%- include ("partials/footer") %>
