--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,7 @@
 <nav>
     <ul class="menu">
-        <li><img src="/img/logo blog.png" alt="logo" width="40px auto" height="40px auto"></li>
-        <li>Home</li>
-        <li class="dropdown-categorias" >Categorias
-            <ul class="categorias">
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>        
-            </ul>
-        </li>
+        <li><a href="/categories"><img src="/img/logo blog.png" alt="logo" width="40px auto" height="40px auto"></a></li>
+        <li><a href="/categories"> Home</a></li>
+        <li><a href="/categories/new">Categorias</a></li>
     </ul>
 </nav>
