--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,28 @@
 *{
     margin:0px;
     padding: 0px;
-    font-family: sans-serif;
-    
+    font-family: sans-serif;    
     text-align: center;
 }
 nav{
     display:flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 100%;
+    max-width: 100%;   
 }
 .menu{  
     max-width: 100%;
     height:7vh;
     display:flex;
-    margin: 5px;
+ 
     padding:10px;  
-    background: #edeff0; 
+    background: #dde6ea; 
 }
-img{
-    margin-top: -12px;
+img{    
+    padding-left: 55px;
+    margin:-10px;
+    display:block;  
+    border-radius:5px; 
 }
 .menu li{
     width:100px;
@@ -30,40 +32,25 @@ img{
 .menu li:hover{   
     background:lavender;   
 }
-.dropdown-categorias{
-    width:100px; }
-.categorias li{  
-    width:100%;
-    background:#edeff0;    
+a{
+    text-decoration: none;
 }
-.categorias{
-    display:none;
+a:visited {
+    color:black;
 }
-.dropdown-categorias:hover .categorias{    
-    width:100px;
-    margin-left:-6px;
-    padding: 5px 5px 5px 5px;  
-    display:flex;
-    flex-direction: column;  
-    align-items: center;  
-    margin-top:5px;       
-    background:#edeff0;
-}
-.categorias li:hover{   
-    width:100%;
-    background:lavender;   
-}
+
+
 main{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
+    justify-content: flex-start;
+    align-items: center;  
+    padding:20px;
+    padding-top: 40px;
     width:80%; 
-    height:74vh;
+    min-height:74vh;
     margin:auto;
- 
-}
+ }
 .box-form-category{
     width:50%;
     height:300px;
@@ -72,7 +59,6 @@ main{
     align-items: center;
     border:1px solid #7000f2;
     border-radius: 20px;
-
 }
 #categoria-texto{
     display: block;
@@ -80,10 +66,7 @@ main{
     margin-bottom: 80px;
     color:#7000f2;
     font-size: larger;
-
 }
-   
-
 input:focus, button:focus{
     border:1px solid #0d55ff;
     outline: 0;
@@ -101,10 +84,17 @@ button{
     border:none;
     border-radius: 80px;
 }
+.table-head tr th{
+    padding: 3px;
+}
 table{
-    margin:5px;
+    padding:2px;
+    border:1px solid #7000f2;
+    border-radius:15px;
 }
-table td{
-    border:1px solid black;
+.table-body td{   
+    font-size: small;
 }
-
+.tr-light{
+    background: #dde6ea;
+}
