--- a/views/indexCategory.ejs
+++ b/views/indexCategory.ejs
@@ -2,7 +2,7 @@
 <%- include ("partials/navbar") %>
    <main>
        <table>
-           <thead>
+           <thead class="table-head">
                <tr>
                    <th>id</th>               
                    <th>título</th>               
@@ -10,21 +10,25 @@
                    <th>ações</th>
                </tr>
            </thead>
-           <% categories.forEach(category=>{ %>
-
-                <tr>
-                    <td><%= category.id %></td>                
-                    <td><%= category.title %></td>               
-                    <td><%= category.slug %></td>               
-                    <td></td>
-                </tr>       
-        
-        
-           <% }) %>
-         
+           <tbody  class="table-body">
+                <% categories.forEach(category=>{ %>
+                    <% if(category.id % 2 == 0){%>
+                        <tr class="tr-dark">
+                            <td><%= category.id %></td>                
+                            <td><%= category.title %></td>               
+                            <td><%= category.slug %></td>               
+                            <td></td>
+                        </tr>   
+                    <%} else{ %> 
+                        <tr class="tr-light">
+                            <td><%= category.id %></td>                
+                            <td><%= category.title %></td>               
+                            <td><%= category.slug %></td>               
+                            <td></td>
+                        </tr> 
+                    <% } %>
+                <% }) %>
+        </tbody>         
        </table>
-
    </main>
-
-
 <%- include ("partials/footer") %>
