--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,7 @@
 <nav>
     <ul class="menu">
-        <li><a href="/categories"><img src="/img/logo blog.png" alt="logo" width="40px auto" height="40px auto"></a></li>
+        <li><a href="/"><img src="/img/logo blog.png" alt="logo" width="40px auto" height="40px auto"></a></li>
         <li><a href="/categories">Categorias</a></li>
+        <li><a href="/articles">Artigos</a></li>
     </ul>
 </nav>
