--- a/views/article/articles.ejs
+++ b/views/article/articles.ejs
@@ -1,48 +1,47 @@
-<%- include ("partials/head") %>
-<%- include ("partials/navbar") %>
-   <main>
-        <form action="/categories/save" method="POST">
-            <span id="categoria-texto"><label for="title">Categoria:</label></span>
-                <input type="text" name="title">
-            <button>Registrar</button>
-        </form>
+<%- include ("../partials/head") %>
+<%- include ("../partials/navbar") %>
+   <main>           
+        <button><a href="/articles/new" style="color:white;"> Criar artigo</a></button><br>    
        <table>
            <thead class="table-head">
                <tr>
                    <th>id</th>               
                    <th>título</th>               
-                   <th>slug</th>               
+                   <th>slug</th>   
+                   <th>categoria</th>            
                    <th>ações</th>
                </tr>
            </thead>
            <tbody  class="table-body">
-                <% categories.forEach(category=>{ %>
-                    <% if(category.id % 2 == 0){%>
+                <% articles.forEach(article=>{ %>
+                    <% if(article.id % 2 == 0){%>
                         <tr class="tr-dark">
-                            <td><%= category.id %></td>                
-                            <td><%= category.title %></td>               
-                            <td><%= category.slug %></td>               
+                            <td><%= article.id %></td>                
+                            <td><%= article.title %></td>               
+                            <td><%= article.slug %></td> 
+                            <td><%= article.category.title %></td>                              
                             <td>
-                                <form action="/categories/edit/<%= category.id %>" method="GET" style="display:inline;">
+                                <form action="/articles/edit/<%= article.id %>" method="GET" style="display:inline;">
                                     <button class="action edit" style="display:inline;">Editar</button>                                
                                 </form>
-                                <form action="/categories/delete" method="POST"  style="display:inline;">
-                                    <input type="hidden" name="id" value="<%= category.id %>">
+                                <form action="/articles/delete" method="POST"  style="display:inline;">
+                                    <input type="hidden" name="id" value="<%= article.id %>">
                                     <button  class="action delete"  style="display:inline;" >Deletar</button>
                                 </form>                            
                             </td>
                         </tr>   
                     <%} else{ %> 
                         <tr class="tr-light">
-                            <td><%= category.id %></td>                
-                            <td><%= category.title %></td>                
-                            <td><%= category.slug %></td>               
+                            <td><%= article.id %></td>                
+                            <td><%= article.title %></td>                
+                            <td><%= article.slug %></td>   
+                            <td><%= article.category.title %></td>               
                             <td>
-                                <form action="/categories/edit/<%= category.id %>" method="GET" style="display:inline;">
+                                <form action="/articles/edit/<%= article.id %>" method="GET" style="display:inline;">
                                     <button class="action edit" style="display:inline;">Editar</button>                                
                                 </form>
-                                <form action="/categories/delete" method="POST"  style="display:inline;">
-                                    <input type="hidden" name="id" value="<%= category.id %>">
+                                <form action="/articles/delete" method="POST"  style="display:inline;">
+                                    <input type="hidden" name="id" value="<%= article.id %>">
                                     <button  class="action delete"  style="display:inline;" >Deletar</button>
                                 </form>   
                             </td>
@@ -59,13 +58,11 @@
                 
                     const decision = confirm("Deseja realmente deletar esta categoria?")                         
                     if(decision){               
-                        console.log("NÂO DELETE")
                     }else{
                         e.preventDefault()
-                        console.log("DELETE")
                     }
                 })
             }
         )        
    </script>
-<%- include ("partials/footer") %>
+<%- include ("../partials/footer") %>
